# Nemotron

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  QA_CUSTOMIZE_MODEL_SCOPE.md  README.md  REVIEW-embed-recipe.md  config.yaml  env.toml  pyproject.toml  run.toml
dev/: index.html
docs/: README.md  broken_links_false_positives.json  conf.py  deployment-guides.md  index.md  nemo-run.md  packed-sft-format-design.md  packed-sft-impl-parquet-nemotron.md  project.json
pr-42/: searchindex.js
pr-54/: searchindex.js
pr-56/: searchindex.js
pr-57/: objects.inv  packed-sft-format-design.html  packed-sft-impl-memmap.html  packed-sft-impl-parquet-megatron-bridge.html  packed-sft-impl-parquet-nemotron.html  searchindex.js
pr-63/: genindex.html  index.html  objects.inv  search.html  searchindex.js
skills/: INDEX.md
tests/: test_artifact.py  (+1 more)
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/: .gitignore  01_synthetic_data_generation.ipynb  02_grpo_training.ipynb  03_run_agent.ipynb  README.md  langgraph_cli_synthetic_preview.jsonl  pyproject.toml
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/artifacts/dataset/: metadata.json  sdg.json
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/artifacts/dataset/parquet-files/: batch_00000.parquet
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/bash_agent/: bash.py  config.py  helpers.py  main_hf.py  prompts.py
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/nemo_gym_resources/: __init__.py
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/nemo_gym_resources/langgraph_cli/: __init__.py
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/nemo_gym_resources/langgraph_cli/tests/: test_app.py
use-case-examples/Build_a_Computer_Use_Agent_with_Synthetic_Data/: Data Designer.md  README.md  RLVR.md  grpo_langgraph_cli.yaml  grpo_langgraph_run.py  langgraph_cli_synthetic_data.ipynb  langgraph_tool_call_env.py  pyproject.toml
(+1019 files in other folders)
